@@ -1,7 +1,6 @@
 package plasmapi.project.plasma.service.logik.impl;
 
 import org.springframework.stereotype.Service;
-import plasmapi.project.plasma.controller.handler.exception.NotFoundException;
 import plasmapi.project.plasma.dto.logikDTO.config.ConfigCreateDto;
 import plasmapi.project.plasma.dto.logikDTO.config.ConfigDTO;
 import plasmapi.project.plasma.mapper.config.ConfigCreateMapper;
@@ -12,7 +11,6 @@ import plasmapi.project.plasma.service.logik.AbstractMotherService;
 import plasmapi.project.plasma.service.logik.ConfigService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ConfigServiceImpl extends AbstractMotherService<Config, Integer, ConfigCreateDto> implements ConfigService {
@@ -27,12 +25,8 @@ public class ConfigServiceImpl extends AbstractMotherService<Config, Integer, Co
 
     @Override
     public List<ConfigDTO> findByUser(Integer userId) {
-        List<Config> configs = configRepository.findByUserId(userId);
-        if (configs.isEmpty()) {
-            throw new NotFoundException("Юзеры с такими Id" + userId + "не найдены");
-        }
-        return configs.stream()
+        return configRepository.findByUserId(userId).stream()
                 .map(configReadMapper::map)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
